--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -418,6 +418,7 @@
 #cliqz-results .cliqz-pattern-title-h1::after, #cliqz-results .cliqz-pattern-title-h2::after, #cliqz-results .cliqz-pattern-title-h3::after {
     background-image: url(chrome://cliqzres/content/skin/history_document.png);
 }
+
 #cliqz-results .cliqz-pattern-title-h3 { margin-bottom: 8px; }
 #cliqz-results .cliqz-pattern-element { padding-left: 20px; background-position: left center; background-size: 14px 14px; margin-bottom: 4px; }
 #cliqz-results .cliqz-pattern-element-title { color: #8c275f; max-width: 50%; display: inline-block; cursor: pointer; }
@@ -428,9 +429,23 @@
 #cliqz-results .ez-no-result { text-align: center; }
 #cliqz-results .ez-no-result .h1 { font-size: 20px; margin-top: 36px; }
 #cliqz-results .ez-no-result .h2 { color: #cccccc; margin-top: 10px; font-size: 16px; }
-#cliqz-results .ez-no-result .logos { margin-top: 36px; }
-#cliqz-results .ez-no-result .cliqz-brand-logo { font-size: 28px; margin: 0 8px; display: inline-block; cursor: pointer; }
-#cliqz-results .ez-no-result .cliqz-logo { width: 100px; margin-top: 31px; cursor: pointer; }
+#cliqz-results .ez-no-result .logos { margin-top: 16px; }
+#cliqz-results .ez-no-result .items { display: inline-block; }
+#cliqz-results .ez-no-result .cliqz-brand-logo {
+    font-size: 28px;
+    margin: 0 8px;
+    display: inline-block;
+    cursor: pointer;
+    margin-bottom: 6px;
+}
+#cliqz-results .ez-no-result .items .item-name {
+    font-size: 16px;
+    max-width: 90px;
+    text-align: center;
+}
+#cliqz-results .ez-no-result .cliqz-logo { width: 100px;
+    margin-top: 31px; cursor: pointer;
+}
 
 /* buttons */
 #cliqz-popup .cqz-btn {
