--- a/cliqz@cliqz.com/cliqz-tab/new-new-tab-tab/css/newtab.css
+++ b/cliqz@cliqz.com/cliqz-tab/new-new-tab-tab/css/newtab.css
@@ -11,25 +11,27 @@ body, html { height: 100%; }
 }
 .prototype, .view, .none { display: none; }
 .ellipsis { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; -o-text-overflow: ellipsis; }
+.input {
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 4px;
+    padding: 6px 9px;
+    border: 1px solid #cccccc;
+}
+.input:focus { border-color: #5ea3f9; }
+.invisible { visibility: hidden; }
 
 #shuffle {
     position: fixed;
     bottom: 25px;
-    right: 160px;
+    left: 25px;
+    width: 40px;
+    height: 40px;
+    background: url(../icon-freshtab-shuffle.svg) no-repeat;
+    background-size: contain;
     cursor: pointer;
     z-index: 2;
-    background: white;
-    padding: 11px;
-}
-
-#settings {
-    position: fixed;
-    bottom: 25px;
-    right: 80px;
-    cursor: pointer;
-    z-index: 2;
-    background: white;
-    padding: 11px;
+    opacity: 0.8;
 }
 
 #add {
@@ -45,34 +47,55 @@ body, html { height: 100%; }
 }
 #add-popup {
     position: fixed;
-    bottom: 75px;
+    bottom: 25px;
     right: 25px;
-    background: white;
-    padding: 10px;
     z-index: 2;
     box-sizing: border-box;
     border-radius: 3px;
     display: none;
 }
-#add-popup-tabs { margin-bottom: 12px; }
-#add-popup-tabs input { display: none; }
-#add-popup-tabs label { margin-right: 10px; display: inline-block}
-#add-popup-tabs input:checked + label { text-decoration: underline}
-
-#add-popup-logo { padding: 8px 11px 0px 0px; float: left; }
-#add-popup-logo > .cliqz-brands-logo { font-size: 18px; }
-#add-popup-controls { width: 200px; float: left; }
-#add-popup-title, #add-popup-url { width: 100%; box-sizing: border-box; margin-bottom: 10px; padding: 2px 5px; }
-#add-popup-ok, #add-popup-cancel { width: 40%; float: right; }
-
-#add-popup-content-widget > div {
-    float: left; 
-    width: 200px; 
-    height: 100px; 
-    background: yellow; 
-    border: 1px solid black;
-    margin: 5px;
+#add-popup-buttons { overflow: hidden; }
+#add-popup-buttons > div {
+    float: right;
+    padding: 5px 10px;
+    border-radius: 3px 3px;
+    font-size: 18px;
+    margin: 0 0 5px 5px;
+    cursor: pointer;
 }
+#add-popup-buttons > div:before { content: "+"; display: inline-block; margin-right: 5px;}
+#add-popup-clock { background: #5ea3fd; color: white; }
+#add-popup-clock:hover { background: #1967af; }
+#add-popup-clock:active { background: #0b4b86; }
+#add-popup-weather { background: #f36e8d; color: white; }
+#add-popup-weather:hover { background: #c24462; }
+#add-popup-weather:active { background: #9b2843; }
+#add-popup-shortcut, #add-popup-content-shortcut { background: #f5f5f5; overflow: hidden; }
+div#add-popup-shortcut {
+    float: left;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    margin: 0;
+    height: 27px;
+    cursor: default;
+}
+#add-popup-content-shortcut { padding: 10px 15px; border-radius: 3px 3px; border-top-left-radius: 0; }
+#add-popup-logo { padding: 7px 11px 0px 0px; float: left; }
+#add-popup-logo > .cliqz-brands-logo { font-size: 20px; border: 1px dashed #cccccc; }
+#add-popup-controls { width: 220px; float: left; }
+#add-popup-ok, #add-popup-cancel {
+    float: right; 
+    font-size: 16px; 
+    margin-top: 6px; 
+    padding: 5px 10px; 
+    border-radius: 3px 3px;
+    cursor: pointer;
+    color: #666666;
+}
+#add-popup-ok { background: #92dba4; color: white; }
+#add-popup-ok:hover { background: #50b23f; }
+#add-popup-ok:active { background: #148701; }
+#add-popup-cancel:hover { color: black; }
 
 /* containers */
 #background {
@@ -86,7 +109,8 @@ body, html { height: 100%; }
 #top {
     height: calc(100% - 25px * 2 - 40px);
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 #wrap {
     z-index: 1;
@@ -99,7 +123,7 @@ body, html { height: 100%; }
 #content {
     display: table-cell;
     vertical-align: middle;
-    padding: 0 40px;
+    padding: 0px 100px;
     overflow-x: hidden;
     overflow-y: auto;
     width: 100%;
@@ -116,8 +140,8 @@ body, html { height: 100%; }
     position: relative;
     background: white;
     overflow: hidden;
-    border-radius: 3px 3px;
-    padding: 12px;
+    border-radius: 6px 6px;
+    padding: 18px;
     box-sizing: border-box;
 }
 .card .close-button { 
@@ -133,73 +157,84 @@ body, html { height: 100%; }
 .card:hover .close-button { display: block }
 .card .close-button:hover { background-image: url(http://cdn.cliqz.com/extension/newtab/history-items/close-red.svg); }
 .card, .card * { cursor: pointer }
-.card .cliqz-brands-logo { font-size: 20px; float: left; margin-right: 12px; }
-.card .title { padding-top: 2px; font-size: 18px; }
-.card .url { margin-top: 4px; font-size: 14px; color: #cccccc }
-
+.card .cliqz-brands-logo { font-size: 20px; }
+.card .side-image { float: left; margin-right: 12px; }
+.card .title { font-size: 18px; min-height: 1px; }
+.card .subtitle { margin-top: 9px; font-size: 14px; color: #999999 }
 
 .card .news {
-    height: 50px;
+    height: 98px;
     position: relative;
     transform-style: preserve-3d;
     animation-direction: normal;
     position: absolute;
-    bottom: 12px;
-    left: 12px;
-    right: 12px;
-}
-.card .news.animated { animation: cycle 15s linear infinite; }
-.card .news.animated:hover { animation-play-state: paused; }
-.card .news-item {
     left: 0;
-    top: 0;
-    right: 0;
     bottom: 0;
-    padding: 5px 10px;
     box-sizing: border-box;
+    table-layout: fixed;
+    width: 100%;
+}
+.card .news-item, .card .news-item-dummy {
+    width: 100%;
+    height: 80px;
     position: absolute;
-    backface-visibility: hidden;
-    line-height: 1.3em;
-    box-sizing: border-box;
-    overflow: hidden;
-    background: -moz-linear-gradient(top, rgba(214,249,255,1) 0%, rgba(158,232,250,1) 100%);
+    opacity: 0;
+    z-index: 0;
 }
-.card .news-item:nth-child(2) { transform: rotateX(0deg) translateZ(14px); }
-.card .news-item:nth-child(3) { transform: rotateX(120deg) translateZ(14px); }
-.card .news-item:nth-child(4) { transform: rotateX(240deg) translateZ(14px); }
-
-@-moz-keyframes cycle{
-  0%{
-    -moz-transform: rotateX(0deg);
-  }
-  28.5714%{
-    -moz-transform: rotateX(0deg);
-  }
-  33.3333%{
-    -moz-transform: rotateX(-120deg);
-  }
-  61.9047%{
-    -moz-transform: rotateX(-120deg);
-  }
-  66.6666%{
-    -moz-transform: rotateX(-240deg);
-  }
-  95.238%{
-    -moz-transform: rotateX(-240deg);
-  }
-  100%{
-    -moz-transform: rotateX(-360deg);
-  }
+.card .news-item-dummy { z-index: 1; }
+.card .news.animated .news-item {
+    -moz-animation-name: animate_news;
+    -moz-animation-duration: 18.0s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-direction: normal;
+    -moz-animation-delay: 0;
+    -moz-animation-play-state: running;
+    -moz-animation-fill-mode: forwards;
+}
+.card .news.animated .news-item:nth-child(2) { -moz-animation-delay: 6.0s; }
+.card .news.animated .news-item:nth-child(3) { -moz-animation-delay: 12.0s; }
+.card .news.animated:hover .news-item { -moz-animation-play-state: paused; }
+.card .news-item .table { display: table; width: 100%; height: 100%; table-layout: fixed; }
+.card .news-item .td { display: table-cell; width: 100%; height: 100%; vertical-align: middle; font-size: 18px; padding: 0 18px; }
+@-moz-keyframes animate_news {
+    0% { opacity: 0; z-index: 2; }
+    6% { opacity: 1; z-index: 2; }
+    25% { opacity: 1; z-index: 2; }
+    30% { z-index: 0; }
+    33% { opacity: 0; }
+    100% { opacity: 0; }
 }
 
-.card-weather .image {
-    background: no-repeat center center;
+.card-weather .loader {
+    background: url(../card-loader.gif) center center no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 50px;
+}
+.card-weather .main .image, .card-weather .settings .image {
+    background: url(../umbrella.svg) no-repeat center center;
     background-size: cover;
     width: 50px;
     height: 50px;
     float: left;
-    margin-right: 12px;
 }
+.city-input { width: calc(100% - 12px - 50px); margin-top: 10px; }
+#citieslist {
+    position: absolute;
+    z-index: 100;
+    background: white;
+    border: 1px solid #5ea3f9;
+    box-sizing: border-box;
+    margin-top: 2px;
+    display: none;
+}
+#citieslist > div {
+    box-sizing: border-box;
+    padding: 6px 9px;
+    cursor: pointer;
+}
+#citieslist > div:hover, #citieslist > div[selected] { background: rgba(94,163,249,0.5) }
 
 .card-message {
     background: rgb(245,73,143);
@@ -209,17 +244,38 @@ body, html { height: 100%; }
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 12px;
+    padding: 18px;
     font-size: 16px;
+    line-height: 1.5;
 }
 
-.card-datetime { font-size: 40px; text-align: center; }
+.card-clock { font-size: 40px; }
+.card-clock .clock { 
+    height: 51px;
+    width: 50px;
+    background: #fafafa;
+    border: 1px solid #333333;
+    position: relative;
+    border-radius: 50% 50%;
+    box-sizing: border-box;
+    transform: rotateZ(-90deg)
+}
+.card-clock .clock .hand-hour, .card-clock .clock .hand-minute, .card-clock .clock .hand-second, .card-clock .notch {
+    width: 15px;
+    height: 2px;
+    background: #333333;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    transform-origin: left;
+} 
+.card-clock .clock .hand-minute { width: 20px; }
+.card-clock .clock .hand-second { width: 20px; height: 1px; top: 25px; background: #d7011d; } 
+.card-clock .notch { width: 24px; height: 1px; background: none }
+.card-clock .notch div { width: 2px; height: 100%; float: right; background: #333333; }
 
 /* search */
-.search-box {
-    margin-bottom: 10px;
-}
-
+.search-box { margin-bottom: 10px; }
 #search {
     width: 100%;
     height: 30px;
@@ -231,12 +287,10 @@ body, html { height: 100%; }
     outline: 0;
     box-sizing: border-box;
 }
-
 /* placeholder */
 ::-webkit-input-placeholder { color: #777; font-size: 14px; font-weight: 300; font-family: "Lato", sans-serif; } /* webkit */
 ::-moz-placeholder { color: #777;  font-size: 14px; font-weight: 300; font-family: "Lato", sans-serif; } /* Firefox 19+ */
 :-moz-placeholder { color: #777; font-size: 14px; font-weight: 300; font-family: "Lato", sans-serif; } /* Firefox 18- */
-
 #search-dropdown {
     position: absolute;
     z-index: 1;
@@ -249,9 +303,4 @@ body, html { height: 100%; }
     box-sizing: border-box;
     display: none;
 }
-
-.result[selected="selected"] {
-    color: #262626;
-    text-decoration: none;
-    background-color: #f5f5f5;
-}
+.result[selected="selected"] { color: #262626; text-decoration: none; background-color: #f5f5f5; }
