--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -33,6 +33,42 @@
 #cliqz-results .ez-text-msg .expression { font-size: 25px; margin-top: 10px; color: #999999 }
 /* --------- END Emergency contact -> text.tpl -------- */
 
+/* ------- START onboarding */
+
+.onboarding-container {
+  -moz-appearance: none;
+  border: none;
+  background-color: transparent;
+  position: relative;
+  margin: 0px;
+  overflow: visible;
+}
+
+.onboarding-cursor {
+  background-image: url(chrome://cliqz/content/onboarding/images/cursor.svg);
+  background-size: 20px; 
+  background-repeat: no-repeat;
+  height: 32px;
+  width: 32px;
+}
+
+.onboarding-lens {
+  width: 48px;
+  height: 48px;
+  background-image: radial-gradient(50% 100%, rgba(119,136,153,0.4) 50%, rgba(119,136,153,0.6) 100%);
+  border-radius: 40px;
+  border: 2px solid white;
+}
+
+.onboarding-callout {
+  font-size: 16px;
+  font-weight: 700;
+  padding: 2px 20px;
+  font-size: 18px;
+}
+
+/* ------- END onboarding */
+
 /* Images search (beta) */
 /*
 #cliqz-results .cqz-result-images {
