--- a/cliqz@cliqz.com/chrome/content/onboarding/css/index.css
+++ b/cliqz@cliqz.com/chrome/content/onboarding/css/index.css
@@ -99,6 +99,35 @@
 }
 /** end new on-boarding stuff **/
 
+/** copied from gallery.css **/
+
+.gallery {
+position: relative;
+}
+.gallery .item {
+height: 400px;
+overflow: hidden;
+text-align: center;
+background: #4d87e2;
+}
+.gallery .controls {
+position: absolute;
+bottom: 0;
+width: 100%;
+text-align: center;
+}
+.gallery .control-button {
+display: inline-block;
+margin: 0 .02em;
+font-size: 3em;
+text-align: center;
+text-decoration: none;
+-webkit-transition: color .1s;
+-o-transition: color .1s;
+transition: color .1s;
+}
+
+/** end new on-boarding stuff **/
 
 body {
   font-family: lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
