add CSS setting that got lost before

--- a/cliqz@cliqz.com/chrome/content/onboarding/css/index.css
+++ b/cliqz@cliqz.com/chrome/content/onboarding/css/index.css
@@ -109,6 +109,7 @@ height: 400px;
 overflow: hidden;
 text-align: center;
 background: #4d87e2;
+height: 750px;
 }
 .gallery .controls {
 position: absolute;
