--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ html
         script(src="/views/js/environment.js")
         script(src="/tool/js/global.js")
         script(src="/tool/js/local.js")
-
     body
         input#urlbar(autofocus="true")
-        #box
+        #results
+        script(src="/views/js/debug.js")
