--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,9 @@ html
         title developer tool
         link(rel="icon",href="/tool/skin/cliqz.png",type="image/x-icon")
         link(href="/views/css/style.css",rel="stylesheet",type="text/css")
+        link(href="/generic/static/skin/brands.css",rel="stylesheet",type="text/css")
+        link(href="/generic/static/skin/browser.css",rel="stylesheet",type="text/css")
+        link(href="/generic/static/skin/browser_progress.css",rel="stylesheet",type="text/css")
         script(src="//localhost:3001/livereload.js")
         script(src="/tool/js/libs.js")
         script(src="/views/js/environment.js")
