--- a/templates/latest.html
+++ b/templates/latest.html
@@ -2,7 +2,27 @@
 <html>
 <head>
 	<title>Cliqz</title>
-	<meta http-equiv="refresh" content="0; url={{ download_link }}" />
+    <noscript>
+	   <meta http-equiv="refresh" content="0; url={{ download_link }}" />
+    </noscript>
+    
+    <!--http://mdn.beonex.com/en/Installing_Extensions_and_Themes_From_Web_Pages-->
+    <script type="text/javascript">
+        function install() {
+            var params = {
+                install: {
+                    URL: "{{ download_link }}",
+                    IconURL: "{{ icon_url }}"
+                }
+            };
+            
+            InstallTrigger.install(params);
+            
+            return false;
+        }
+        
+        install();
+    </script>
 </head>
 <body>
 
