--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -6,6 +6,78 @@
     margin-bottom: 8px;
 }
 
+/* ------- Bundesliga EZ ----------*/
+#cliqz-results .ez-liga .cqz-ez-title::after {
+    background-image: url(https://cdn.cliqz.com/extension/EZ/generic/EZ-soccer.svg); margin-bottom: 0px;
+}
+#cliqz-results .ez-liga-rank  { color: #999999;font-size: 12px; margin: -8px 0px 5px; }
+#cliqz-results .ez-liga-spieltag  { color: #cccccc; margin: 0px 0px 0px; }
+#cliqz-results .ez-liga-gameTimeLoc  { color: #999999; margin: 0px 0px 0px}
+#cliqz-results .ez-liga-oneGameScore  {margin:18px 0px;}
+#cliqz-results .ez-liga-teamName  {float:left;text-align:left;color: #333333;font-size: 18px;max-width: 40%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+#cliqz-results .ez-liga-score {color: #74d463; font-size: 18px; }
+#cliqz-results .ez-liga-vs {color: #999999;font-size: 18px;}
+#cliqz-results .ez-liga-live {text-align:center;color: #999999; font-size: 12px; margin-top:3px}
+#cliqz-results .ez-liga-connector {text-align:center;float:left; width:20%;}
+#cliqz-results .ez-liga-timezone {position: absolute; bottom: 10px; left: 22px; color: #cccccc; font-size: 12px}
+
+#cliqz-results .ez-liga-spieltag-ucg  { color: #cccccc; margin: -3px 0px 5px; }
+#cliqz-results .ez-liga-upcominggames {display:table; width: -moz-calc(100% - 35px); max-width:600px;padding-top:5px;border-style:none}
+#cliqz-results .ez-liga-1upcominggame {float:left; width:50%; padding:03px 0px 5px;}
+#cliqz-results .ez-liga-ucg-teamName  {float:left;text-align:left;color: #333333;width: 60%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+#cliqz-results .ez-liga-ucg-gameTime {float:left; color: #999999; padding-left:15px; max-width:30%;white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+#cliqz-results .ez-liga-button {position: absolute; bottom: 12px; left: 22px; background-color:#1B4AA3}
+#cliqz-results .ez-liga-ucg-timezone {position: absolute; bottom: 12px; left: 200px; color: #cccccc; font-size: 12px}
+
+
+#cliqz-results .ez-liga table {
+    margin-top: 5px;
+   border-collapse:collapse;
+    text-align: center;
+}
+#cliqz-results .ez-liga th, #cliqz-results .ez-liga td {
+    padding: 5px 0px;
+    border-bottom: 1px solid #cccccc;
+}
+#cliqz-results .ez-liga th {
+    color: #999999;
+    font-weight:normal;
+}
+
+#cliqz-results .ez-liga td {
+     width: 35px;
+}
+
+#cliqz-results .ez-liga td:nth-child(1) {
+    color: #999999;
+    width: 10px;
+    padding-right: 15px;
+}
+
+#cliqz-results .ez-liga td:nth-child(2), #cliqz-results .ez-liga th:nth-child(2) {
+    width: 130px;
+    text-align: left;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+#cliqz-results .ez-liga th:nth-child(2) {
+    color: #999999;
+}
+
+#cliqz-results .ez-liga td:nth-child(10) {
+   font-weight: bold;
+}
+
+#cliqz-results .ez-liga tr:nth-child(5) * {
+    border-bottom: none;
+}
+
+
+/* ------- END Bundesliga EZ ----------*/
+
 
 /* ------- FLIGHT STATUS EZ ----------*/
 #cliqz-results .flightStatusEZ-flightNumber {color:#333333; font-size: 18px; overflow: hidden;}
