#524 : Spell-checker / ability to keep or revert spell correction

--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -305,3 +305,8 @@
     -moz-image-region: var(--urlbar-dropmarker-region);
     background-image: none;
 }
+
+#cliqz-message-container .cqz-message em {
+    font-style: normal;
+    font-weight: bold;
+}
