showing callout with button to start tour below URL when on-boarding page is loaded—instead of having start button on web page

--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -99,6 +99,17 @@
   font-size: 18px;
 }
 
+.onboarding-callout .cqz-btn {
+    margin: 0 5px;
+    cursor: pointer;
+    color: white;
+    border-radius: 3px;
+    padding: 4px 8px;
+    text-align: center;
+    display: inline-block;
+    background-color: #0480c3;
+}
+
 /* ------- END onboarding */
 
 /* Images search (beta) */
