--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -97,18 +97,25 @@
   font-weight: 700;
   padding: 2px 20px;
   font-size: 18px;
+  max-width: 400px;
 }
 
+.onboarding-callout .btn-container { right: 0px; position: absolute; text-align: right; margin-top: 10px; }
+
 .onboarding-callout .cqz-btn {
-    margin: 0 5px;
+    margin: 0px;
     cursor: pointer;
-    color: white;
+    color: black;
     border-radius: 3px;
     padding: 4px 8px;
     text-align: center;
     display: inline-block;
-    background-color: #0480c3;
+    background-color: #8CE12F;
+    font-weight: 300;    
 }
+
+.onboarding-callout .cqz-btn-ok { background-color: #8CE12F; }
+.onboarding-callout .cqz-btn-cancel { background-color: #c3043e; color: white; }
 
 /* ------- END onboarding */
 
