--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -35,8 +35,8 @@
 #cliqz-results .ez-liga-vs {color: #999999;font-size: 18px;}
 #cliqz-results .ez-liga-live {text-align:center;color: #999999; font-size: 12px; margin-top:3px}
 #cliqz-results .ez-liga-connector {text-align:center;float:left; width:20%;}
-#cliqz-results .ez-liga-timezone {position: absolute; bottom: 10px; left: 22px; color: #cccccc; font-size: 12px}
-#cliqz-results .ez-liga-sponsor {position: absolute; bottom: 10px; right: 22px; color: #cccccc; font-size: 12px}
+#cliqz-results .ez-liga-timezone {position: absolute; bottom: 14px; left: 22px; color: #cccccc; font-size: 12px}
+#cliqz-results .ez-liga-sponsor {position: absolute; bottom: 14px; right: 22px; color: #cccccc; font-size: 12px}
 
 #cliqz-results .ez-liga-spieltag-ucg  { color: #cccccc; margin: -3px 0px 5px; }
 #cliqz-results .ez-liga-upcominggames {display:table; width: -moz-calc(100% - 35px); max-width:600px;padding-top:5px;border-style:none}
@@ -44,8 +44,8 @@
 #cliqz-results .ez-liga-ucg-teamName  {float:left;text-align:left;color: #333333;width: 60%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
 #cliqz-results .ez-liga-ucg-gameTime {float:left; color: #999999; padding-left:15px; max-width:30%;white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
 #cliqz-results .ez-liga-button {position: absolute; bottom: 12px; left: 22px; background-color:#1B4AA3}
-#cliqz-results .ez-liga-ucg-timezone {position: absolute; bottom: 12px; left: 150px; color: #cccccc; font-size: 12px}
-
+#cliqz-results .ez-liga-ucg-timezone {position: absolute; bottom: 14px; left: 150px; color: #cccccc; font-size: 12px}
+#cliqz-results .ez-liga-timezone-short{max-width: calc(100% - 350px);}
 #cliqz-results .ez-liga table {margin-top: 5px;border-collapse:collapse;text-align: center;}
 #cliqz-results .ez-liga th, #cliqz-results .ez-liga td {padding: 5px 0px;border-bottom: 1px solid #cccccc;}
 #cliqz-results .ez-liga th {color: #999999;font-weight:normal;}
