#644 fix installing of extension in Chrome / use InstallTrigger only in Gecko platform

--- a/templates/latest.html
+++ b/templates/latest.html
@@ -21,7 +21,14 @@
             return false;
         }
         
-        install();
+        if ("InstallTrigger" in window)
+        {
+          // Gecko platform, InstallTrigger available
+          install();
+        } else {
+          location.href = {{ download_link }};  
+        }
+        
     </script>
 </head>
 <body>
