--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -92,6 +92,7 @@
   background-color: transparent;
   position: relative;
   margin: 0px;
+  padding: 0px;
   overflow: visible;  
 }
 
@@ -112,13 +113,18 @@
 }
 
 .onboarding-callout {
+  font-size: 14px;
+  font-weight: 500;
+  padding: 2px 2px;
+  margin: 0px;
   font-size: 16px;
-  font-weight: 700;
-  padding: 2px 20px;
-  font-size: 18px;
+  position: relative;
+  display: block;
 }
 
-.onboarding-callout .btn-container { right: 0px; position: absolute; text-align: right; margin-top: 10px; }
+.onboarding-callout .msg-container { position: relative; display: block; white-space: pre-line; max-width: 300px; }
+
+.onboarding-callout .btn-container { position: relative; display: block; right: 0px; text-align: right; margin-top: 10px; }
 
 .onboarding-callout .cqz-btn {
     margin: 0px;
@@ -129,7 +135,6 @@
     text-align: center;
     display: inline-block;
     background-color: #8CE12F;
-    font-weight: 300;    
 }
 
 .onboarding-callout .cqz-btn-ok { background-color: #8CE12F; }
