fix install page

--- a/templates/latest.html
+++ b/templates/latest.html
@@ -5,7 +5,7 @@
     <noscript>
 	   <meta http-equiv="refresh" content="0; url={{ download_link }}" />
     </noscript>
-    
+
     <!--http://mdn.beonex.com/en/Installing_Extensions_and_Themes_From_Web_Pages-->
     <script type="text/javascript">
         function install() {
@@ -15,20 +15,20 @@
                     IconURL: "{{ icon_url }}"
                 }
             };
-            
+
             InstallTrigger.install(params);
-            
+
             return false;
         }
-        
+
         if ("InstallTrigger" in window)
         {
           // Gecko platform, InstallTrigger available
           install();
         } else {
-          location.href = {{ download_link }};  
+          location.href = "{{ download_link }}";
         }
-        
+
     </script>
 </head>
 <body>
