--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -113,19 +113,23 @@
 }
 
 .onboarding-callout {
-  font-size: 14px;
-  font-weight: 500;
   padding: 2px 2px;
   margin: 0px;
   font-size: 16px;
   position: relative;
   display: block;
+  font-weight: 500;
 }
 
-/*.onboarding-callout { background-color: #FA544F; color: white; }*/
-.onboarding-callout { background-color: white; color: black; }
+#cliqzExtOnboardingCallout .onboarding-callout { font-weight: 300; }
 
-.onboarding-callout .msg-container { position: relative; display: block; white-space: pre-line; max-width: 300px; }
+#cliqzExtOnboardingCallout .panel-arrowcontent {padding-top: 0px;}
+
+#cliqzExtOnboardingCallout .panel-arrowcontent { background: #FD544F; color: white; }
+
+/*#cliqzExtOnboardingCallout .panel-arrow { list-style-image: url(chrome://cliqzres/content/skin/panelarrow-vertical-red.png); }*/
+
+.onboarding-callout .msg-container { position: relative; display: block; white-space: pre-line; max-width: 300px; line-height: 1.4; }
 
 .onboarding-callout .btn-container,
 .onboarding-callout .btn-container-extended { position: relative; display: block; right: 0px; text-align: right; margin-top: 10px; }
@@ -143,6 +147,7 @@
     background-color: #8CE12F;
     margin-left: auto;
     margin-right: auto;
+    font-weight: 500;
 }
 
 .onboarding-callout .btn-container-extended .cqz-btn { display: block; max-width: 160px; }
@@ -150,10 +155,18 @@
 .onboarding-callout .btn-container .cqz-btn-ok { background-color: #8CE12F; }
 .onboarding-callout .btn-container .cqz-btn-cancel { background-color: #c3043e; color: white; }
 
-.onboarding-callout .btn-container-extended .cqz-btn-ok { background-color: #63A4F6; color: white; }
-.onboarding-callout .btn-container-extended .cqz-btn-cancel { background-color: transparent; color: #333; text-decoration: underline; font-size: 10px; font-weight: 300; margin-top: 5px;}
+.onboarding-callout .btn-container-extended .cqz-btn-ok { background-color: #63A4F6; color: white; margin-top: 30px; }
+.onboarding-callout .btn-container-extended .cqz-btn-cancel { background-color: transparent; color: #EEE; text-decoration: underline; font-size: 12px; font-weight: 300; margin-top: 5px;}
 
 .onboarding-callout .cliqz-logo { width: 100px; margin-top: 30px; }
+
+
+#cliqzExtOnboardingCallout .cliqz-logo {
+  background-image: url(chrome://cliqzres/content/skin/img/cliqz.svg);
+  background-repeat: no-repeat;
+  height: 20px;  
+  margin-left: 20px;
+}
 
 /* ------- END onboarding */
 
