change cursor to pointer on hover

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -49,7 +49,8 @@
 
 #cliqz-popup a:hover,
 #cliqz-results .cqz-ez-title span.subtitle:hover{
- text-decoration:underline;
+  text-decoration:underline;
+  cursor:pointer;
 }
 
 /* reset defaults for dropdown content */
