--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -456,7 +456,17 @@
    margin-left: 10px
 }
 #cliqz-results .cqz-ez-subtitle {
-  margin-bottom: 10px;
+  display: block;
+  /*margin-top: -7px;*/
+  margin-bottom: 15px;
   color: #999999;
-  display:inline-block;
+}
+
+#cliqz-results .clearfix::after, #cliqz-results .clearfix::before {
+    clear: both;
+    content: " ";
+    display: block;
+    font-size: 0;
+    height: 0;
+    visibility: hidden;
 }
