--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -159,7 +159,13 @@
 #cliqz-results .cqz-result-logo:hover { font-size: 28px; right: 20px }
 
 /* common */
-#cliqz-results .cqz-ez-btns { margin: 13px 0px 18px; height: 30px; padding-right: 60px; }
+#cliqz-results .cqz-ez-btns { 
+    margin: 13px 0px 0px; 
+    height: 30px; 
+    padding-right: 60px;
+    position: absolute;
+    bottom: 20px;
+}
 #cliqz-results .cqz-ez-btn {
     border-radius: 3px;
     cursor: pointer;
