--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -96,12 +96,32 @@
   overflow: visible;  
 }
 
+@keyframes changescale {
+  from {
+    transform: scale(1.0);
+  }
+
+  to {
+    transform: scale(.5);
+  }
+}
+
 .onboarding-cursor {
   background-image: url(chrome://cliqz/content/onboarding/images/cursor.svg);
   background-size: 20px;
   background-repeat: no-repeat;
   height: 32px;
-  width: 32px;
+  width: 32px;  
+}
+
+.pulsate {
+  transform: scale(1.0);
+  transform-origin: 0% 0%;
+  animation-delay: 0.5s;
+  animation-duration: 0.5s;
+  animation-name: changescale;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 .onboarding-lens {
